# sloth

./: Pipfile  main.py  pyproject.toml  report.xml  test_example.py
sloth/: .gitignore  manage.py
sloth/results/: admin.py  models.py
sloth/results/management/commands/: get_app_duration.py  import_test_results.py
sloth/results/migrations/: 0001_initial.py  0002_result_app_name.py
sloth/sloth/: settings.py  urls.py  wsgi.py
