[tool.poetry]
name = "sloth"
version = "0.1.0"
description = ""
authors = ["Yothin Muangsommuk <m@yothinix.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
xmltodict = "^0.13.0"
Django = "^4.1.7"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
